objects/DNB_API_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>02671531 - Update Avention/DNB Hoovers API</description>
    <fields>
        <fullName>AccessToken__c</fullName>
        <label>Access Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuthAPI__c</fullName>
        <label>Auth API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConsumerKey__c</fullName>
        <label>Consumer Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConsumerSecret__c</fullName>
        <label>Consumer Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SearchAPI__c</fullName>
        <label>Search API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <description>Stored the Access Token timestamp as it is valid for 24 hrs</description>
        <label>Timestamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DNB API Setting</label>
</CustomObject>